2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_aarch64.c: Correct bad setup for assertion
	of consistency before a patch.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_mips-cpu.c: Correct typo in the jit_bmsr
	implementation that was using the wrong test result
	register.

2014-07-28 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_memory.c: Do not call free on NULL pointers.

	* include/lightning/jit_private.h, lib/jit_note.c,
	lib/lightning.c: Add a wrapper to memcpy and memmove
	to not actually call those functions with a zero size
	argument, and likely also a null src or dst.

2014-07-27 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_private.h, lib/jit_disasm.c,
	lib/lightning.c: Remove the global jit_progname variable.
	It was being only used in jit_init_debug, that is called
	from init_jit, so, just pass an argument.

2014-07-27 Paulo Andrade <pcpa@gnu.org>

	* doc/body.texi: Add note that jit_set_memory_functions
	should be called before init_jit, because init_jit
	itself may call the memory wrappers.

2014-04-22 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm.c: Do not get confused with default settings
	if /proc is not mounted on Linux specific code path.

2014-04-09 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_aarch64.h, include/lightning/jit_arm.h,
	include/lightning/jit_hppa.h, include/lightning/jit_ia64.h,
	include/lightning/jit_mips.h, include/lightning/jit_ppc.h,
	include/lightning/jit_private.h, include/lightning/jit_s390x.h,
	include/lightning/jit_sparc.h, include/lightning/jit_x86.h:
	Do not add jit_regset_t, JIT_RA0, and JIT_FA0 to the installed
	header file. These types and definitions are supposed to be
	only used internally.

2014-04-05 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm-cpu.c: Only adjust stack pointer in prolog if
	need stack space, that is, do not emit a nop instruction
	subtracting zero from the stack pointer.

2014-04-04 Paulo Andrade <pcpa@gnu.org>
